src/styles/index.css
/* ---------- Variables ---------- */
:root {
	/* ---------- Colors ---------- */
	--light_grey: #C5C6C6;
	--bg_grey: #F3F2F2;
	
	/* ---------- Variant Colors ---------- */
	/* Primary */
  --parchment: #ffffff;
	--onyx: #171A1C;
  --sapphire: #00539A;
	--sage: #D9E5CC;
	--clarity: #EBF4FA;
	--currency: #4D5C49;
	/* Secondary */
	--dark_blue: #102E47;
	--medium_blue: #3D8ACC;
	--light_blue: #93CDFF;
	--dark_blue: #30362B;
	--medium_green: #C1D2B1;
	--light_green: #D9E5CC;
	--dark_grey: #515355;
	--medium_grey: #747576;
	--light_grey: #C5C6C6;
	/* Utility */
	--bg_grey: #F3F2F2;
	/* RGBA - Used for MSO button colors */
	--rgb_sapphire: rgb(0, 83, 154);
	--rgb_onyx: rgb(23, 26, 28);
	
	/* ---------- Frame colors ---------- */
	--frame: #dadada;
	--frame_sapphire: #296faa;
	--frame_onyx: #3c3f40;
	--frame_currency: #6a7666;
}
/* ---------- END Colors ---------- */

/* ---------- Boilerplate ---------- */
body {
	margin: 0;
	padding-top: 10px;
	background-color: var(--bg_grey);
}

table {
	border-collapse: collapse !important;
}

table tr td {
	vertical-align: top;
}

ul {
	margin: 0;
	padding: 16px;
	line-height: 160%;
	font-weight: 400;
	font-size: 12px;
}

li {
	padding-bottom: 8px;
	padding-left: 0;
	margin: 0;
}

li::marker {
	color: var(--sapphire);
	font-size: 16px;
}

li a {
	font-size: 12px;
}

li > span {
	font-size: 20px;
	vertical-align: middle;
	color: var(--sapphire);
}

/* Typography */
h1, h2, h3, h4 {
	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
	/* font-family: "PP Neue World", serif; */
	font-weight: normal;
	line-height: 100%;
	margin: 0;
}

h1 {
	font-size: 40px;
}

h2 {
	font-size: 32px;
}

h3 {
	font-size: 24px;
	line-height: 120%;
}

h4 {
	font-size: 16px;
	font-weight: bold;
}

.subheadline {
	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
	font-weight: bold;
	font-size: 24px;
	line-height: 95%;
	letter-spacing: -0.24px;
}

h2.subheadline {
	font-size: 16px;
	letter-spacing: -0.16px;
	font-weight: normal;
	line-height: 120%;
}

h3.subheadline {
	font-size: 12px;
	letter-spacing: -0.12px;
	line-height: 120%;
}

p, .paragraph {
	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
	font-size: 14px;
	font-weight: normal;
	line-height: 120%;
	margin: 0;
}

.paragraph-2 {
	font-size: 12px;
	line-height: 140%;
}

.paragraph-3 {
	font-size: 10px;
}

a {
	font-family: "Helvetica Neue LT Std", Helvetica, sans-serif;
	font-size: 16px;
	font-weight: normal;
	color: var(--sapphire);
	text-transform: capitalize;
	line-height: 120%;
}

.link-2 {
	font-size: 12px;
	line-height: 160%;
}

.disclaimer {
	font-size: 9px;
}

/* Utilities */
.d-block {
	display: block;
}

.mw-100 {
	max-width: 100%;
}

.fixed {
	table-layout: fixed;
}

.center {
	text-align: center;
}

.padding-y-20 {
	padding: 20px 0;
}

.margin-t-8 {
	margin-top: 8px;
}

/* Layout */
.wrapper {
	width: 100%;
}

.layout_two-column {
	display: block;
}

.layout_two-column .column {
	display: inline-block;
	width: 100%;
	max-width: 267px;
}
/* ---------- END Boilerplate ---------- */

/* ---------- Component Styles ---------- */
.btn {
	display: inline-block;
	font-size: 12px;
	font-weight: bold;
}

.btn.pill {
	background-color: var(--rgb_sapphire);
	color: var(--parchment);
	border: 1px solid var(--sapphire);
	border-radius: 80px;
	text-align: center;
	text-decoration: none;
	-webkit-text-size-adjust: none;
	line-height: 32px;
	padding: 0 20px;

	/* Outlook Overrides */
	mso-border-alt: none #FFFFFF 0;
}

.btn.pill.secondary {
	background-color: var(--parchment);
	color: var(--sapphire);
}

.btn.pill.onyx {
	background-color: var(--onyx);
	color: var(--parchment);
}

.btn.pill.onyx.secondary {
	background-color: var(--parchment);
	color: var(--rgb_onyx) !important;
	border: 1px solid #ffffff;
}

.btn.text {
	color: var(--onyx);
	text-decoration: none;
}

.btn.text .arrow {
	font-size: 16px;
}

.eyebrow {
	text-transform: uppercase;
	font-size: 10px;
	line-height: 8px;
	vertical-align: middle;
}

.eyebrow .bullet {
	font-size: 30px;
	line-height: 8px;
	vertical-align: middle;
}
/* ---------- END Component Styles ---------- */

/* ---------- Module Styles ---------- */
.module {
	/* width: 100%; */
	width: 640px;
	background-color: var(--parchment);
	/* max-width: 640px; */
	color: var(--onyx);
}

.module.sapphire {
	background-color: var(--sapphire);
	color: var(--parchment);
}

.module.sage {
	background-color: var(--sage);
}

.module.onyx {
	background-color: var(--onyx);
	color: var(--parchment);
}

.module.clarity {
	background-color: var(--clarity);
}

.module.currency {
	background-color: var(--currency);
	color: var(--parchment);
}

.dark p, .dark h1, .dark h2, .dark h3, .dark h4 {
	color: #ffffff;
}

.frame {
	width: 32px;
}

.content {
	padding: 32px 16px;
	border-right: 0.5px solid var(--frame);
	border-left: 0.5px solid var(--frame);
}

.module.sapphire .content {
	border-right: 0.5px solid var(--frame_sapphire);
	border-left: 0.5px solid var(--frame_sapphire);
}

.module.onyx .content {
	border-right: 0.5px solid var(--frame_onyx);
	border-left: 0.5px solid var(--frame_onyx);
}

.module.currency .content {
	border-right: 0.5px solid var(--frame_currency);
	border-left: 0.5px solid var(--frame_currency);
}

.content.v-flush {
	padding: 0 16px;
}

.content.alt {
	padding: 48px 16px 16px 16px;
}

.highlights-table tr.bordered td {
	padding: 16px 0;
	border-bottom: 1px solid var(--frame);
}
/* ---------- END Module Styles ---------- */

/* ---------- Mobile Styles ---------- */
@media screen and (max-width: 640px) {
	/* This is mainly to allow the wrapper to fit within 640px in DreamWeaver while also allowing columns to wrap on mobile where supported */
	.module {
		width: 100% !important;
		max-width: 640px;
	}
}
/* ---------- END Mobile Styles ---------- */

/* ---------- Dark Mode Styles ---------- */
@media (prefers-color-scheme: dark) {
	/* .module {
		background-color: #00539A !important;
		color: #ffffff !important;
	}

	.btn.pill {
		background-color: #ffffff !important;
		color: #00539A !important;
	}

	.content {
		border-right: 0.5px solid #296faa !important;
		border-left: 0.5px solid #296faa !important;
	} */
}
/* ---------- END Dark Mode Styles ---------- */

